<resources>
    <string name="app_name">carlyandlil</string>
    <string name="lets_get_dressed">Lets get dressed</string>
    <string name="self_destruct" />
    <string name="todo">TODO</string>
    <string name="Forgot_password" />
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo1">TODO</string>
    <string name="a_tiny_android_icon">A tiny Android icon</string>
    <string name="a_tiny_android_icon2">A tiny Android icon</string>
    <string name="a_tiny_android_icon3">A tiny Android icon</string>
    <string name="a_tiny_android_icon4">A tiny Android icon</string>
    <string name="a_tiny_android_icon6">A tiny Android icon</string>
</resources>