<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/homepage3"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:text="New look"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/fowardbutton"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toEndOf="@+id/backbutton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage6"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginTop="252dp"
        android:text="Date:"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbutton"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage7"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="284dp"
        android:text="Category"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbutton"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/my_button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="School"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_button7"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/my_button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="Work"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage7"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/my_button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:text="Evening"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_button7"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/my_button6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:text="Beach"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/my_button5"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage9"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="172dp"
        android:text="Description:"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage6"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage11"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="184dp"
        android:text="(0/150 words)"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/homepage9"
        app:layout_constraintTop_toTopOf="@+id/homepage9"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/myImageView3"
        android:layout_width="394dp"
        android:layout_height="234dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/workfit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage3" />

    <ImageView
        android:id="@+id/navbarbackground"
        android:layout_width="426dp"
        android:layout_height="101dp"
        android:layout_marginBottom="4dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/camerabutton5"
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:layout_marginStart="144dp"
        android:background="#E7F9EF"
        android:contentDescription="A tiny Android icon"
        android:src="@drawable/navigation_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/my_button12"
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:layout_marginStart="288dp"
        android:background="#E7F9EF"
        android:contentDescription="A tiny Android icon"
        android:src="@drawable/profile_foreground"
        app:layout_constraintStart_toStartOf="@+id/navbarbackground"
        app:layout_constraintTop_toTopOf="@+id/camerabutton5" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="#E7F9EF"
        android:contentDescription="A tiny Android icon"
        android:src="@drawable/closet_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navbarbackground" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="#E7F9EF"
        android:contentDescription="@string/a_tiny_android_icon"
        android:src="@drawable/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fowardbutton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="272dp"
        android:background="#E7F9EF"
        android:contentDescription="@string/a_tiny_android_icon6"
        android:src="@drawable/checkbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backbutton"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>