<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
        android:id="@+id/homepage"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="My Closet"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/homepage2"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:text="School Outfits"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/homepage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage3"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:text="Beach Outfits"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homepage4"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage4"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:text="Work Outfits"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homepage2"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/homepage5"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:text="Evening Outfits"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage3"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/myImageView4"
        android:layout_width="64dp"
        android:layout_height="73dp"
        android:layout_marginStart="196dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/schoolfit4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView2" />

    <ImageView
        android:id="@+id/myImageView2"
        android:layout_width="64dp"
        android:layout_height="73dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="116dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/schoolfit2"
        app:layout_constraintStart_toStartOf="@+id/myImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="63dp"
        android:layout_height="73dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/schoolfit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/myImageView3"
        android:layout_width="64dp"
        android:layout_height="73dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="-1dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/schoolfit3"
        app:layout_constraintDimensionRatio="w,"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myImageView5"
        app:layout_constraintTop_toTopOf="@+id/myImageView5" />

    <ImageView
        android:id="@+id/myImageView5"
        android:layout_width="64dp"
        android:layout_height="73dp"
        android:layout_marginStart="276dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/schoolfit5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView4" />

    <ImageView
        android:id="@+id/myImageView10"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="276dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/workfit4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView7" />

    <ImageView
        android:id="@+id/myImageView9"
        android:layout_width="56dp"
        android:layout_height="67dp"
        android:layout_marginStart="160dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/workfit3"
        app:layout_constraintStart_toStartOf="@+id/myImageView12"
        app:layout_constraintTop_toTopOf="@+id/myImageView8" />

    <ImageView
        android:id="@+id/myImageView7"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="200dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/workfit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView13" />

    <ImageView
        android:id="@+id/myImageView8"
        android:layout_width="64dp"
        android:layout_height="71dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/workfit2"
        app:layout_constraintStart_toStartOf="@+id/myImageView12"
        app:layout_constraintTop_toBottomOf="@+id/myImageView2" />

    <ImageView
        android:id="@+id/myImageView16"
        android:layout_width="64dp"
        android:layout_height="68dp"
        android:layout_marginStart="240dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/workfit6"
        app:layout_constraintStart_toStartOf="@+id/myImageView12"
        app:layout_constraintTop_toTopOf="@+id/myImageView9" />

    <ImageView
        android:id="@+id/myImageView11"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/beachfit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView12" />

    <ImageView
        android:id="@+id/myImageView12"
        android:layout_width="56dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/beachfit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView" />

    <ImageView
        android:id="@+id/myImageView13"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="116dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/beachfit3"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView11" />

    <ImageView
        android:id="@+id/myImageView14"
        android:layout_width="61dp"
        android:layout_height="68dp"
        android:layout_marginStart="352dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/beachfit4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView16"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/myImageView18"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="204dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/eveningfit2"
        app:layout_constraintBottom_toBottomOf="@+id/myImageView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView17" />

    <ImageView
        android:id="@+id/myImageView15"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/beachfit5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView11" />

    <ImageView
        android:id="@+id/myImageView20"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="364dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/eveningfit4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView19" />

    <ImageView
        android:id="@+id/myImageView17"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="116dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/eveningfit1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView15" />


    <ImageView
        android:id="@+id/myImageView19"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="288dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/eveningfit3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myImageView18" />

    <ImageView
        android:id="@+id/navbarbackground"
        android:layout_width="426dp"
        android:layout_height="101dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:background="#E7F9EF"
        android:contentDescription="@string/todo1"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:src="@drawable/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/camerabutton"
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:layout_marginStart="144dp"
        android:background="#E7F9EF"
        android:contentDescription="@string/a_tiny_android_icon4"
        android:src="@drawable/navigation_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/navbarbackground"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:layout_marginStart="292dp"
        android:background="#E7F9EF"
        android:contentDescription="@string/a_tiny_android_icon3"
        android:src="@drawable/profile_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/camerabutton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="121dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="#E7F9EF"
        android:contentDescription="@string/a_tiny_android_icon2"
        android:src="@drawable/closet_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>